# md-blog-generator

./: Cargo.toml
css_sources/: retro.css  splendor.css
md_sources/: bom_radar.md  hello_world.md  physics_stuff.md  podcasts.md
rendered_html/: bom_radar.html  first_post.html  hello_world.html  index.html  physics_stuff.html  podcasts.html
src/: lib.rs  main.rs
src/blog_gen/: blog_generator.rs  html_template.rs  mod.rs
