[package]
name = "md-blog-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
clap = { version = "4.5.1", features = ["derive"] }
glob = "0.3.1"
html-escape = "0.2.13"
pulldown-cmark = "0.9.2"
scraper = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
tera = "1.19.1"
thiserror = "1.0.57"
tinytemplate = "1.1"
